services/address-lookup/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: address-lookup-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: address-lookup-service
      aadpodidbinding: $AL_MI_NAME
  template:
    metadata:
      labels:
        app: address-lookup-service
        aadpodidbinding: $AL_MI_NAME
    spec:
      hostAliases:
      - ip: "10.13.3.60"
        hostnames:
          - "rer-core-services"
      - ip: "10.13.3.30"
        hostnames:
          - "companies-house-service"
      - ip: "10.13.3.20"
        hostnames:
          - "address-lookup-service"
      - ip: "10.13.3.10"
        hostnames: 
          - "adb2c-user-service"
      - ip: "10.14.3.10"
        hostnames:
          - "external-we-app"
      containers:
        - name: address-lookup-service
          image: $ACR.azurecr.io/address-lookup-service:latest
          ports:
            - name: http
              containerPort: 80
          livenessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /health
              port: 80
          readinessProbe:
            initialDelaySeconds: 5
            periodSeconds: 5
            httpGet:
              path: /health
              port: 80
          resources:
            limits:
              cpu: 250m
              memory: 1024Mi
            requests:
              cpu: 100m
              memory: 512Mi
      imagePullSecrets:
        - name: acr-secret
