services/address-lookup/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: address-lookup-service
  annotations:
    service.beta.kubernetes.io/azure-load-balancer-internal: "true"
    service.beta.kubernetes.io/azure-load-balancer-internal-subnet: "ofg-$ENV-$FACING-sub-apps"
spec:
  loadBalancerIP: 10.13.3.20
  type: LoadBalancer
  ports:
    - port: 80
  selector:
    app: address-lookup-service
